# ChatRoom

./: CMakeLists.txt  global.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registerdialog.cpp  registerdialog.h  registerdialog.ui  resource.qrc
ChatRoom/: CMakeLists.txt  applyfriend.cpp  applyfriendpage.cpp  authenfriend.ui  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatitembase.cpp  chatpage.cpp  chatpage.h  chatpage.ui  chatuseritem.cpp  chatuseritem.h  chatuseritem.ui  chatuserlist.cpp  chatuserlist.h  chatview.cpp  chatview.h  clickedbtn.cpp  clickedlabel.cpp  clickedlabel.h  contactuseritem.cpp  contactuseritem.h  contactuseritem.ui  contactuserlist.cpp  contactuserlist.h  findsuccessdlg.cpp  findsuccessdlg.ui  global.cpp  global.h  grouptipitem.cpp  grouptipitem.h  httpmanager.cpp  httpmanager.h  listitembase.cpp  listitembase.h  logindialog.cpp  logindialog.h  (+24 more)
ChatRoom/style/: stylesheet.qss
ChatServer/: AsioIOContextPool.cpp  AsioIOContextPool.h  CMakeLists.txt  CServer.cpp  CSession.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlManager.h  RedisManager.cpp  config.ini  const.h  data.h  main.cpp
ChatServer2/: CMakeLists.txt  CServer.cpp  ChatGrpcClient.cpp  ChatGrpcClient.h  ChatServiceImpl.cpp  LogicSystem.cpp  LogicSystem.h  MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  config.ini  const.h  main.cpp  message.pb.cc  message.pb.h  message.proto
GateServer/: CMakeLists.txt  CServer.cpp  CServer.h  ConfigManager.cpp  ConfigManager.h  GRPCConnPool.cpp  GRPCConnPool.h  HttpConnection.cpp  HttpConnection.h  IOContextPool.cpp  IOContextPool.h  LogicSystem.cpp  LogicSystem.h  MySqlPool.cpp  MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  RedisConnPool.cpp  RedisManager.cpp  RedisManager.h  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  main.cpp  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
StatusServer/: CMakeLists.txt  ChatGrpcClient.h  MysqlManager.h  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  main.cpp  message.pb.cc
VerifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  proto.js  server.js
style/: stylesheet.qss
